# phonikud-byt5

./: .gitignore  README.md  pyproject.toml
byt5-onnx/: README.md  export.py  main.py  predict.py  pyproject.toml
src/phonikud_byt5/: config.py  run_eval.py  run_predict.py  run_train.py  utils.py
